2006-06-??: 1.02
	fixed stack overflow when recursive class <: recursive signature
	improved a bit commandline : allow several hxml arguments

2006-05-25: 1.01
	added neko.Utf8
	Serializer/Unserializer now support utf8 strings
	allowed subtyping of prop accesses public/private when implementing an interface
	removed "eval" from Remoting APIs (only calls - more easy to handle).
	added flash6 support
	fixed Std.is on different platforms (interfaces implements interface)
	added AsyncConnection.amfConnect for flash
	added SWF overflow checks
	changed "property" to "var"
	don't allow monorph unification with Dynamic (more safe)
	allowed multiple parsing and typing errors
	review and completed commandline options
	error on backwards constant integer iterators
	remoting proxy constructor is now public
	fixed -swf-header override the swflib background color
	moved all remoting classes into the haxe.remoting package
	added haxe.remoting.LocalConnection

2006-05-17: 1.0
	fixed small bugs in JS Xml Parser (empty attribute, newlines in attributes)
	added default Content-Type for haxe.Http in JS
	haxe.AsyncConnection : onError should not be call if error occur in onData
	fixed infinite loop if haxe.Unserializer.readDigits reach eof on JS/Flash
	fixed bugs in neko.Web and neko.Sys (some methods returning "null" instead of null)
	added neko.Socket.setBlocking for nonblocking sockets
	fixed bug in js generator when using cascading iterators
	fixed typing bug when overloading parametrized method
	fixed bug in js generator when "try" without curly braces.
	allowed enum catching
	added remoting proxys
	allowed neko.Web API commandline emulation outside mod_neko
	removed subtyping Anon :> Instance
	added signatures, Iterator is now a signature
	getter/setter and public/private unification
	allowed anonymous declaration with interface-style syntax (for signatures)
	optimized code generated for underscore in enum matches parameters
	fixed flash/js String.charCodeAt(outside) => null